--- a/style.css
+++ b/style.css
@@ -32,6 +32,13 @@ body{
     grid-template-columns: repeat(3, auto);
 }
 
+.conteiner.x .linha:not(.x):not(.circulo):hover::after,
+.conteiner.x .linha:not(.x):not(.circulo):hover::before,
+.conteiner.circulo .linha:not(.x):not(.circulo):hover::after,
+.conteiner.circulo .linha:not(.x):not(.circulo):hover::before{
+    background:  rgba(234, 230, 229, 0.308) !important;
+}
+
 .linha{
     width: 100px;
     height: 100px;
@@ -40,6 +47,11 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.linha.x,
+.linha.circulo{
+    cursor: not-allowed;
 }
 
 .linha:nth-child(1),
@@ -66,8 +78,12 @@ body{
     border-bottom: none;
 } 
 
+/* Fazendo o X */
+
 .linha.x::before,
-.linha.x::after{
+.linha.x::after,
+.conteiner.x .linha:not(.x):not(.circulo):hover::after,
+.conteiner.x .linha:not(.x):not(.circulo):hover::before{
     content: "";
     height: calc(100px * 0.15);
     width: calc(100px * 0.9);
@@ -75,20 +91,26 @@ body{
     position: absolute;
 }
 
-.linha.x::before{
+.linha.x::before,
+.conteiner.x .linha:not(.x):not(.circulo):hover::before{
     transform: rotate(45deg);
 }
 
-.linha.x::after{
+.linha.x::after,
+.conteiner.x .linha:not(.x):not(.circulo):hover::after{
     transform: rotate(-45deg);
 }
 
+/*Fazendo o O */
+
 .linha.circulo::before,
-.linha.circulo::after{
+.linha.circulo::after,
+.conteiner.circulo .linha:not(.x):not(.circulo):hover::after,
+.conteiner.circulo .linha:not(.x):not(.circulo):hover::before{
     content: "";
     height: calc(100px * 0.9);
     width: calc(100px *0.9);
-    background: #8F8073;
+    background: #EAE6E5;
     position: absolute;
     border-radius: 50%;
 }
